# ommrema

./: .gitignore  Dockerfile  LICENSE  README.md  package.json
.github/workflows/: backend-lint.yaml  docker-build.yaml  frontend-prettier.yaml
backend/: Cargo.toml
backend/src/: config.rs  handler.rs  main.rs  types.rs
backend/src/handler/: api.rs  auth.rs  error.rs  middleware.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
