[package]
name = "ommrema"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
envy = "0.4.2"
eyre = "0.6.12"
jsonwebtoken = "9.3.0"
oauth2 = "4.4.2"
once_cell = "1.20.2"
poem = { version = "3.1.3", features = ["embed", "eyre06"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "http2"] }
rust-embed = "8.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
time = "0.3.36"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
url = { version = "2.5.3", features = ["serde"] }
