[package]
name = "ommrema"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
chrono = "0.4.38"
color-eyre = "0.6.3"
envy = "0.4.2"
eyre = "0.6.12"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
oauth2 = "4.4.2"
object_store = { version = "0.11.1", features = ["aws"] }
once_cell = "1.20.2"
poem = { version = "3.1.3", features = ["embed", "eyre06"] }
quick-xml = { version = "0.37.0", features = ["serialize"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "http2"] }
rust-embed = "8.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
twox-hash = "2.0.1"
url = { version = "2.5.3", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v5"] }
